--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qODaVfwg&k=Job&j=otOsbfwE&__jvst=Employee+Referral&__jvsd=syFYDhwA&__jvsc=Twitter&bid=niNnqMw9'>Abrigo Careers - DevOps Engineer</a></h5> 
+<p><span class="badge badge-light">Raleigh, North Carolina</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://ast-engineering.join.com/jobs/456721-devops-engineer-m-w-d'>Job @ AST Engineering  (Ottobrunn): DevOps Enginee... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
@@ -50,7 +54,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://sparkcognition.applytojob.com/apply/l32pPal7fJ/Senior-DevOps-Engineer'>Senior DevOps Engineer - SparkCognition - Career Page</a></h5> 
+<h5><a href='http://sparkcognition.applytojob.com/apply/l32pPal7fJ/Senior-DevOps-Engineer'>Senior DevOps Engineer - SparkCognition - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -70,7 +74,7 @@
 <p><span class="badge badge-light">Gurgaon, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://orderbird.join.com/jobs/443630-junior-devops-engineer-f-m-d'>Job @ orderbird (Berlin): (Junior) DevOps Engineer... | JOIN</a></h5> 
+<h5><a href='https://orderbird.join.com/jobs/443630-junior-devops-engineer-f-m-d'>Job @ orderbird (Berlin): (Junior) DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -112,7 +116,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/otOsbfwE'>Abrigo Careers - DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/otOsbfwE'>Abrigo Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -132,7 +136,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://ovhus.applytojob.com/apply/U3phWEytzM/Cloud-Engineer-DevOps-OpenStack-Auotmation-Development'>Cloud Engineer - DevOps (OpenStack / Auotmation / Development) - OVHcloud - Career Page</a></h5> 
+<h5><a href='http://ovhus.applytojob.com/apply/U3phWEytzM/Cloud-Engineer-DevOps-OpenStack-Auotmation-Development'>Cloud Engineer - DevOps (OpenStack / Auotmation / Development) - OVHcloud - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -172,7 +176,7 @@
 <p><span class="badge badge-light">Luxembourg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569207-stage-devops-f-h'>Groupe CANAL+ STAGE - Devops - F/H | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569207-stage-devops-f-h'>Groupe CANAL+ STAGE - Devops - F/H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -266,7 +270,7 @@
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/datatrontechnologies/jobs/4497193002'>Job Application for DevOps and Systems Engineer at Datatron Technologies</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/datatrontechnologies/jobs/4497193002'>Job Application for DevOps and Systems Engineer at Datatron Technologies</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -312,7 +316,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MJHLifeSciences/743999698382238-devops-engineer'>MJH Life Sciences DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MJHLifeSciences/743999698382238-devops-engineer'>MJH Life Sciences DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -376,7 +380,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Addison/DevOps-Engineer---Continuous-Integration-Continuous-Delivery_19069159'>DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Addison/DevOps-Engineer---Continuous-Integration-Continuous-Delivery_19069159'>DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... The Continuous Integration/Continuous Delivery DevOps Engineer will join an 
 agile service team focused on daily production service delivery and application?...</p>
@@ -411,7 +415,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://ovhus.applytojob.com/apply/U3phWEytzM/Cloud-Engineer-DevOps-OpenStack-Auotmation'>Cloud Engineer - DevOps (OpenStack / Auotmation) - OVHcloud - Career Page</a></h5> 
+<h5><a href='http://ovhus.applytojob.com/apply/U3phWEytzM/Cloud-Engineer-DevOps-OpenStack-Auotmation'>Cloud Engineer - DevOps (OpenStack / Auotmation) - OVHcloud - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -447,7 +451,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://orbitpeople.applytojob.com/apply/oHWBYGP2jX/AWSCloudDevOps-Engineer'>AWS/Cloud/DevOps Engineer - Orb IT People - Career Page</a></h5> 
+<h5><a href='http://orbitpeople.applytojob.com/apply/oHWBYGP2jX/AWSCloudDevOps-Engineer'>AWS/Cloud/DevOps Engineer - Orb IT People - Career Page</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -458,10 +462,6 @@ agile service team focused on daily production service delivery and application?
 <h5><a href='https://jobs.jobvite.com/stars-group/job/orzrbfwm'>The Stars Group Careers - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q0KaVfwz&k=Job&j=o9Qrbfwl&__jvst=Employee+Referral+&__jvsd=s2Lp2iw1&__jvsc=Twitter&bid=nmCUnMww'>Litera Microsystems Careers - DevOps Engineer</a></h5> 
-<p><span class="badge badge-light">Chicago, Illinois</span></p>
-<p>Posted on:: 2019-10-29</p>
 <hr/>
 
 
